--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echoes of the Void - Text RPG</title>
+    <title>The Forest of Healing</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game-container">
         <div id="story-output">
-            <p>Welcome to <strong>Echoes of the Void</strong>. The multiverse awaits your choices...</p>
+            <p>Welcome to <strong>The Forest of Healing</strong>. Your journey to find Uncle Fatty begins...</p>
+        </div>
+        <div id="side-panel">
+            <h3>Available Commands:</h3>
+            <ul id="command-list">
+                <!-- Commands will be dynamically added here -->
+            </ul>
         </div>
         <div id="user-input">
             <input type="text" id="commandInput" placeholder="Enter your command..." autofocus>
